--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrapital</title>
+    <link rel="icon" type="image/x-icon" href="btst-black-boot.ico">
     <style>
         /* Basic Reset and Body Styling */
         html, body {
